# bare-metal-game-project

./: .gitignore  README.md  gatorgrade.yml
.github/workflows/: main.yml
docs/: report.md  style.md
src/: CMakeLists.txt  main.c
src/data/: cJSON.c
src/headers/: cache.h  data.h  lwipopts.h  lwipopts_examples_common.h
src/network/: tls_common.c  tls_verify.c
